fix callouts alignment

--- a/quartz/styles/callouts.scss
+++ b/quartz/styles/callouts.scss
@@ -145,7 +145,6 @@
 .callout-title {
   display: flex;
   align-items: flex-start;
-  justify-content: center;
   gap: 5px;
   padding: 1rem 0;
   color: var(--color);
